2004-08-27  Keith Seitz  <keiths@redhat.com>

	* SampleViewLabelProvider.java: Update comments about change from
	SampleFile to ProfileImage.

2004-07-13  Keith Seitz  <keiths@redhat.com>

	* SampleView.java (DEFAULT_TEXT_EDITOR_ID): New constant.
	(_openEditor): Use IDE.openEditor. New Eclipse 3.0 change.

2003-10-10    <keiths@redhat.com>

	* SampleView.java: Update method comments throughout.
	(_openEditor(IFile)): Use OprofilePlugin.getActiveWorkbenchWindow to get
	the currently active workbench window.
	(_openEditor(IStorage, String)): Likewise.

2003-07-08  Keith Seitz  <keiths@redhat.com>

	* SampleViewContentProvider.java (getElements): For samples,
	display information about the sample itself. For all other elements,
	display information about the element's children.

2003-07-08  Keith Seitz  <keiths@redhat.com>

	* SampleView.java: Remove unused imports.
	* SampleViewContentProvider.java: Likewise.
	* SampleViewLabelProvider.java: Likewise.

2003-05-21  Keith Seitz  <keiths@redhat.com>

	* SampleSorter.java: Add copyright notice.
	* SampleView.java: Likewise.
	* SampleViewContentProvider.java: Likewise.
	* SampleViewLabelProvider.java: Likewise.

2003-04-24  Keith Seitz  <keiths@redhat.com>

	* SampleSorter.java (compare): Fix javadoc.

2003-04-03  Keith Seitz  <keiths@redhat.com>

	* SampleView.java: Remove import of SystemProfileSystem.
	* SampleViewContentProvider.java: Remove import of
	SystemProfileSession.
	* SampleViewLabelProvider.java: Remove import of
	SystemProfileSample and SystemProfileSymbol.

2003-03-19  Keith Seitz  <keiths@redhat.com>

	* SampleSorter.java: New file.
	* SampleView.java: New file.
	* SampleViewContentProvider.java: New file.
	* SampleViewLabelProvider.java: New file.