@@ -1,3 +1,9 @@
+2006-04-28  Keith Seitz  <keiths@redhat.com>
+
+	* SampleSorter.java (compare): Addresses can sometimes be null in the
+	VMA column. If they are, use "0" instead to force them to the top of
+	the list.
+
 2004-08-27  Keith Seitz  <keiths@redhat.com>
 
 	* SampleViewLabelProvider.java: Update comments about change from
